--- a/src/main/resources/templates/layout/login.html
+++ b/src/main/resources/templates/layout/login.html
@@ -80,6 +80,19 @@
             }
         });
     });
+
+    const StaffIdInput = document.getElementById('staff_id');
+
+    const storedStaff_id = localStorage.getItem("staff_id");
+
+    if (storedStaff_id) {
+        StaffIdInput.value = storedStaff_id;
+    }
+
+
+    StaffIdInput.addEventListener('input', function() {
+        localStorage.setItem("staff_id", this.value.trim());
+    });
 </script>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
