--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -173,18 +173,21 @@
             </a>
             <i class="bi bi-list toggle-sidebar-btn"></i>
         </div><!-- End Logo -->
-        <div class="search-bar">
-            <form class="search-form d-flex align-items-center" method="POST" action="#">
-                <input type="text" name="query" placeholder="Search" title="Enter search keyword">
-                <button type="submit" title="Search"><i class="bi bi-search"></i></button>
-            </form>
-        </div><!-- End Search Bar -->
+        <a href="/searcher">
+            <div class="search-bar">
+                <form class="search-form d-flex align-items-center" >
+                    <input id="searchInput" type="text" name="query" placeholder="Search" title="Enter search keyword">
+                    <button type="button" title="Search"><i class="bi bi-search"></i></button>
+                </form>
+            </div>
+        </a>
+      <!-- End Search Bar -->
 
         <nav class="header-nav ms-auto">
             <ul class="d-flex align-items-center">
 
                 <li class="nav-item d-block d-lg-none">
-                    <a class="nav-link nav-icon search-bar-toggle " href="#">
+                    <a class="nav-link nav-icon search-bar-toggle " href="/searcher">
                         <i class="bi bi-search"></i>
                     </a>
                 </li><!-- End Search Icon-->
@@ -311,7 +314,6 @@
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
                         <img src="/static/assets/img/default-logo.png" alt="Profile" class="rounded-circle"
                              th:unless="${session.user.photo}"/>
-                        <img th:src="${session.user.photo}" alt="Profile" class="rounded-circle"/>
                         <!--                        <img th:unless="${session.user.photo == null}" th:src="${session.user.photo}" alt="Profile" class="rounded-circle" />-->
                         <span class="d-none d-md-block dropdown-toggle ps-2" th:text="${session.user.name}">Name</span>
                     </a><!-- End Profile Iamge Icon -->
