--- a/src/main/resources/templates/user/user-profile.html
+++ b/src/main/resources/templates/user/user-profile.html
@@ -37,13 +37,16 @@
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-lg-9 col-xl-7">
                     <div class="card">
-                        <div class="rounded-top text-white d-flex flex-row" style="height:200px;" onclick="showbgModal()" id="profile-background" >
-                            <img id="profile-background-img" src="/assets/img/pf-bg1.gif" style="position: absolute; top: 0; left: 0; width: 100%; height: 200px; object-fit: cover; " alt="pf-bg">
+                        <div class="rounded-top text-white d-flex flex-row" style="height:200px;" id="profile-background" >
+                            <img onclick="showbgModal()" id="profile-background-img" src="/assets/img/pf-bg1.gif" style="position: absolute; top: 0; left: 0; width: 100%; height: 200px; object-fit: cover; " alt="pf-bg">
                             <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px;">
-                            <img id="profile-photo" src="/assets/img/default-logo.png" alt="Profile" class="img-fluid img-thumbnail mt-4 mb-2"
-                                 style="width: 150px; z-index: 1" th:if="${user.photo == null}">
-                            <img  th:unless="${user.photo == null}" th:src="${user.photo}" alt="Profile" class="img-fluid img-thumbnail mt-4 mb-2"
-                                  style="width: 150px; z-index: 1" />
+                            <img id="profile-photo"  src="/assets/img/default-logo.png" alt="Profile" class="img-fluid img-thumbnail mt-4 mb-2 profile-photo"
+                                 style="width: 150px; z-index: 1; border-radius: 20px;" th:if="${user.photo == null}" onclick="chooseFile()"/>
+                                <form id="photoForm">
+                                    <input class="form-control" type="file" name="file" id="file-input" style="display: none">
+                                </form>
+                                <img id="profile-photo-exist" th:unless="${user.photo == null}" th:src="${user.photo}" alt="Profile" class="img-fluid img-thumbnail mt-4 mb-2 profile-photo"
+                                  style="width: 150px; z-index: 1; border-radius: 20px;"  onclick="chooseFile()"/>
                             <button id="edit-photo-btn" type="button" class="btn btn-outline-dark edit-button" data-mdb-ripple-color="dark" style="z-index: 1;">Edit Profile</button>
                             Edit profile
                         </div>
@@ -503,26 +506,6 @@
     </div>
 </div>
 
-
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="photoForm">
-                    <input class="form-control" type="file" name="file" id="file1" >
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="changeProfilePhoto()">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
 <div th:replace="~{index::footer}"></div>
 
 <script>
@@ -729,6 +712,20 @@
         console.error('User id not found');
     }
 
+ const chooseFile = () => {
+        document.getElementById('file-input').click();
+ };
+
+document.addEventListener('DOMContentLoaded',() => {
+
+    document.getElementById('file-input').addEventListener('change', (event) => {
+        if (event.target.files.length > 0) {
+            console.log('Oh shit ma ya tay')
+            changeProfilePhoto()
+        }
+    });
+
+});
 
     async function changeProfilePhoto(){
         let data = new FormData(document.getElementById('photoForm'))
@@ -737,6 +734,26 @@
             body : data
         });
         console.log(response)
+        if(response.ok){
+            const res =await response.json();
+            const photo = res.photo;
+            console.log("Shit lr",photo);
+           const imgTag =  document.getElementById('profile-photo');
+           const sessionImgTag = document.getElementById('session-user-photo');
+           if(imgTag){
+               console.log("Default photo",photo);
+               imgTag.src = photo;
+               sessionImgTag.src = photo;
+           }
+           const imgExistTag =  document.getElementById('profile-photo-exist');
+            const sessionExistImgTag = document.getElementById('session-user-photo-exist');
+           if(imgExistTag){
+               console.log("Replace Photo",photo);
+               imgExistTag.src = photo;
+               sessionExistImgTag.src = photo;
+           }
+
+        }
     }
     $(document).ready(function() {
         let selectedHobbies = [];
