--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -877,6 +877,25 @@
 
     <!-- end edit modal box  -->
 
+    <!-- event edit moddal box start  -->
+
+    <div class="modal fade" id="eventEditModalBox" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel-for-event-edit">Edit Event</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="eventEditModal">
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- event edit modal box end  -->
+
 
     <!-- loading modal box start  -->
 
