--- a/src/main/resources/static/assets/css/react.css
+++ b/src/main/resources/static/assets/css/react.css
@@ -11,8 +11,8 @@
 }
 
 .button_wrapper {
-    position: relative;
-}
+     position: relative;
+ }
 
 .like_button {
     border: none;
@@ -44,7 +44,7 @@
 }
 
 .like_button.active svg {
-    fill: var(--primary-color);
+    /*fill: var(--primary-color);*/
 }
 
 .button_icon {
@@ -61,7 +61,7 @@
     padding: 1px;
     background-color: #242426;
     position: absolute;
-    left: 15%;
+    left: 65%;
     top: -110%;
     border-radius: 1.5rem;
     transform: translate(-50%, 10px);
@@ -108,5 +108,107 @@
 }
 
 .all_likes_wrapper>div:hover::before {
+    display: block;
+}
+
+/*for event*/
+.button_wrapper1 {
+    position: relative;
+}
+
+.like_button1 {
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5rem;
+    /* font-size: 2rem; */
+    /* padding: .5rem 6rem; */
+    padding: .5rem 2rem;
+    border-radius: .5rem;
+    /* background-color: #242426; */
+    cursor: pointer;
+    user-select: none;
+    transition: all 75ms;
+    margin-top: -8px;
+}
+
+.like_button1:hover {
+    background-color: #353538;
+}
+
+.like_button1:active {
+    scale: .95;
+}
+
+.like_button1.active {
+    color: var(--primary-color);
+}
+
+.like_button1.active svg {
+    /*fill: var(--primary-color);*/
+}
+
+.button_icon1 {
+    width: 2rem;
+}
+
+.all_likes_wrapper1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
+    user-select: none;
+    border: 1px solid #353538;
+    padding: 1px;
+    background-color: #242426;
+    position: absolute;
+    left: 50%;
+    top: -110%;
+    border-radius: 1.5rem;
+    transform: translate(-50%, 10px);
+    opacity: 0;
+    visibility: hidden;
+    z-index: -1;
+}
+
+.all_likes_wrapper1.active {
+    transform: translate(-50%, 0);
+    visibility: unset;
+    opacity: unset;
+    z-index: unset;
+    transition: all 200ms 500ms linear;
+}
+
+.all_likes_wrapper1 img {
+    width: 50px;
+    height: 50px;
+    transition: all 150ms linear;
+    cursor: pointer;
+}
+
+.all_likes_wrapper1>div {
+    position: relative;
+}
+
+.all_likes_wrapper1>div::before {
+    content: attr(data-title);
+    position: absolute;
+    top: -90%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    background-color: black;
+    color: white;
+    padding: .1rem .3rem;
+    border-radius: 1.5rem;
+    font-size: 14px;
+    display: none;
+}
+
+.all_likes_wrapper1>div:hover>img {
+    scale: 1.3;
+}
+
+.all_likes_wrapper1>div:hover::before {
     display: block;
 }
