--- a/src/main/resources/static/assets/css/home.css
+++ b/src/main/resources/static/assets/css/home.css
@@ -32,7 +32,7 @@ nav .nav-middle a  > i{
 }
 .container{
     background: #eee;
-    display: flex;
+    /*display: flex;*/
 }
 .middle-panel{
     flex: 1;
