--- a/src/main/resources/static/assets/css/group-card.css
+++ b/src/main/resources/static/assets/css/group-card.css
@@ -1,5 +1,6 @@
 .community-card {
-    width: calc(50% - 20px);
+    width: 520px;
+    height: 300px;
     margin: 10px;
     float: left;
     position: relative;
@@ -7,8 +8,16 @@
     background-position: center;
     border-radius: 10px;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
-
+@media (max-width: 768px) {
+    .community-card {
+        flex: 0 0 100%;
+        margin: 10px auto;
+    }
+}
 .community-card:nth-child(2n+1) {
     margin-right: 10px;
 }
