--- a/src/main/resources/static/assets/css/userView.css
+++ b/src/main/resources/static/assets/css/userView.css
@@ -19,6 +19,7 @@ body{margin-top:20px;
     padding: 30px 30px 0 30px;
     background-color: #3f43fd;
     overflow: hidden;
+    height: 230px;
 }
 .single_advisor_profile .advisor_thumb::after {
     -webkit-transition-duration: 500ms;
